# Encoding_Music

./: .gitignore  Basic Command Line Arguments.md  Beautiful_Soup_Day.ipynb  CRIM_Combined_Reports_12_2022.ipynb  CRIM_Model_0002-SHORT.mei  CRIM_Quick_Cadences_11_09.ipynb  Debugging in VS Code.md  Graphs and Charts.md  Graphs.py  M255_A_Python_Basics.ipynb  M255_B_Pandas.ipynb  M255_Beautiful_Soup_HW.ipynb  M255_C_Spotify_API.ipynb  M255_C_Spotify_Radar.ipynb  M255_C_Spotify_Radar_final.ipynb  M255_C_Spotipy_draft.ipynb  M255_E_Beautiful_Soup_HW.ipynb  M255_E_Beautiful_Soup_HW_Updated.ipynb  M255_F_Music21_Basics.ipynb  M255_G_CRIM_Ints_Basics.ipynb  M255_H_CRIM_Ints_Melodic_Harmonic.ipynb  M255_J_Edit_Distance.ipynb  M255_K_CRIM_Intervals_HW.ipynb  M255_K_CRIM_Intervals_HW_11_16_2022.ipynb  M255_M_RILM_Notebook.ipynb  M255_Metadata_Cleaning-Copy1.ipynb  M255_Metadata_Cleaning.ipynb  M255_NoteBook_Model.ipynb  M255_NoteBook_Model.md  M255_NoteBook_Model.qmd  M255_NoteBook_Model.quarto_ipynb  M255_Notebook_Model.html  M255_O_SoundMaps.ipynb  M255_Pandas_HomeWork_Template.ipynb  Modularized Functions.md  Music_255_Spotify_API_Updated.ipynb  Networks.md  README.md  Regressions.md  SPARQL.md  (+18 more)
01_Tutorials/: 00_M255_Metadata_Cleaning_Model_2025.ipynb  00_M255_NoteBook_Model.html  00_M255_NoteBook_Model.ipynb  00_M255_NoteBook_Model_brief.ipynb  00_M255_Voyager_Clean_Tidy.ipynb  01_Notebook_Introduction.html  01_Notebook_Introduction.md  01_Notebook_Introduction_Quarto.md  02_Anaconda_VS_Code_Jupyter.md  02_VS_Code_Google_Collab.md  03_Python_Basics.md  03_Python_Basics_cheatsheet_dev.md  03_Python_Basics_dev.ipynb  03_Python_Basics_dev_2.html  03_Python_Basics_dev_2.ipynb  03_Python_Basics_dev_3.ipynb  03_Python_Basics_dev_Notebook.ipynb  03_Python_Jupyter_Basics_FAQ_dev.md  04_A_Pandas_Basics.md  04_B_Pandas_Clean.md  04_B_Pandas_Clean_Tidy.md  04_C_Pandas_Filter_Find_Group.md  04_C_Pandas_Tidy.md  04_D_Pandas_Filter_Find_Group.md  04_E_Networks.md  04_Pandas_Basics copy.md  04_Pandas_Basics.html  04_Pandas_Basics.md  05_Pandas_Clean_Data.md  05_Spotify.md  05_Spotify_Functions.md  05b_Spotify_Functions.md  06_Beautiful_Soup_MEI.md  06_Beautiful_Soup_MEI_Billboard.md  06_Pandas_Tidy_Data.html  06_Pandas_Tidy_Data.md  07_Beautiful_Soup_Scraping.md  07_Pandas_Filter_Find_Group.html  07_Pandas_Filter_Find_Group.md  08_Debugging_in_VS_Code.md  (+27 more)
02_Data_about_Music/: M255_A_Python_Basics.ipynb  M255_B_Pandas.ipynb  (+4 more)
(+204 files in other folders)
