[tool.poetry]
name = "encoding-music"
version = "1.1.0"
description = "A Python library for encoding music"
authors = ["Richard Freedman <rfreedma@haverford.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
spotipy = "^2.20.0"
plotly = "5.19.0"
urllib3 = ">=1.26.0"

[tool.poetry.dev-dependencies]
pytest = ">6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"