[tool.poetry]
name = "streamlit-intervals"
version = "0.1.0"
description = "streamlit app for crim-intervals"
authors = ["Richard Freedman <rfreedma@haverford.edu>"]
license = "Creative Commons NC-SA"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
