[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "encoding-music"
version = "1.0.0"
description = "Encoding Music Packages"
readme = "README.md"
authors = ["Richard Freedman <rfreedma@haverford.edu>"]
license = "creative commons"

# Poetry will auto-detect the encoding_music package now

[tool.poetry.dependencies]
python = ">=3.9"
altair = "5.2.0"
beautifulsoup4 = "^4.12.3"
certifi = "2020.12.5"
crim_intervals = "2.0.59"
chardet = "4.0.0"
h11 = "0.14.0"
httpcore = "1.0.2"
httpx = "0.27.0"
idna = "3.1"
ipython = ">=7.23.1,<8.0"
joblib = "1.0.1"
jsonschema = ">=3.1"
lxml = "5.1.0"
matplotlib = "^3.9.2"
more-itertools = "8.7.0"
music21 = "8.3.0"
numpy = ">=1.20.2,<2.0.0"
pandas = ">=2.2.0"
statsmodels = "0.14.1"
plotly = "5.19.0"
plotly-express = "0.4.1"
pyarrow = ">=15.0.0"
pyvis = "0.1.9"
python-dateutil = "2.8.2"
python-louvain = "0.16"
pytz = "2021.1"
rfc3986 = "1.4.0"
seaborn = "0.13"
six = "1.16.0"
sniffio = "1.2.0"
textdistance = "4.2.1"
xlsxwriter = "3.0.2"
webcolors = "1.11.1"
requests = "2.31.0"
verovio = "4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

# Updated path for bumpversion
[[tool.poetry_bumpversion.replacements]]
files = ["encoding_music/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.poetry_bumpversion.replacements]]
files = ["README.md"]
search = 'Current Version: {current_version}'
replace = 'Current Version: {new_version}'